<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.northeast.saudeemdia.ChildPersonActivity"
    android:orientation="vertical">

    <TextView android:text="@string/person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/person_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView android:text="@string/person_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/person_address_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView android:text="@string/person_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/person_birthday_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView android:text="@string/person_sus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/person_sus_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/add_person_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addPerson"/>

</LinearLayout>
